Update java to 25 (#482)