@@ -15,7 +15,3 @@ dependencies {
     testImplementation libs.mockito.kotlin
     testImplementation libs.reactor.core
 }
-
-test {
-    jvmArgs(['--enable-preview'])
-}
